# anki-scribe

./: .gitignore  CLAUDE.md  LICENSE  README.md
addon/: CardReview.html  Code.gs  Sidebar.html  appsscript.json  styles.css.html
backend/: Dockerfile  anki_builder.py  main.py  models.py  pdf_parser.py  pyproject.toml  qa_parser.py
backend/tests/: test_anki_builder.py  test_api.py  test_pdf_api.py  test_pdf_parser.py  test_qa_parser.py
frontend/: index.html  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: NotesToAnki.css  NotesToAnki.tsx
