[project]
name = "docs-notes-anki"
version = "0.1.0"
description = "Convert Google Docs study notes to Anki flashcards"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "genanki>=0.13.0",
    "pydantic>=2.0.0",
    "PyMuPDF>=1.24.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
